@@ -1,72 +1,121 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/scrollView1"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content" >
-    
-	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	    android:id="@+id/itemRoot"
-	    android:layout_width="fill_parent"
-	    android:layout_height="wrap_content"
-	    android:layout_marginLeft="10dip"
-	    android:layout_marginRight="10dip"
-	    android:minWidth="300px"
-	    android:orientation="vertical"
-	    android:paddingLeft="20dip"
-	    android:paddingRight="20dip" >
-	    
-	    <TextView android:layout_width="fill_parent"
-	        android:layout_height="wrap_content" android:layout_weight="1"
-	        android:textStyle="bold" android:text="Initial Prompt">
-	    </TextView>
-	    <EditText android:text="Initial Prompt" android:id="@+id/txtInitialPrompt"
-	        android:layout_width="fill_parent" android:layout_height="wrap_content"
-	        android:visibility="visible" android:freezesText="true">
-	    </EditText>
-	    <TextView android:layout_width="fill_parent"
-	        android:layout_height="wrap_content" android:layout_weight="1"
-	        android:textStyle="bold" android:text="AudioPassThru Display Text 1">
-	    </TextView>
-	    <EditText android:text="AudioPassThru Display Text 1" android:id="@+id/txtAudioPassThruDisplayText1"
-	        android:layout_width="fill_parent" android:layout_height="wrap_content"
-	        android:visibility="visible" android:freezesText="true">
-	    </EditText>
-	    <TextView android:layout_width="fill_parent"
-	        android:layout_height="wrap_content" android:layout_weight="1"
-	        android:textStyle="bold" android:text="AudioPassThru Display Text 2">
-	    </TextView>
-	    <EditText android:text="AudioPassThru Display Text 2" android:id="@+id/txtAudioPassThruDisplayText2"
-	        android:layout_width="fill_parent" android:layout_height="wrap_content"
-	        android:visibility="visible" android:freezesText="true">
-	    </EditText>
-	    <TextView android:layout_width="fill_parent"
-	        android:layout_height="wrap_content" android:layout_weight="1"
-	        android:textStyle="bold" android:text="Sampling Rate">
-	    </TextView>
-	    <Spinner android:layout_width="wrap_content"
-	        android:layout_height="wrap_content" android:id="@+id/spnSamplingRate">
-	    </Spinner>
-	    <TextView android:layout_width="fill_parent"
-	        android:layout_height="wrap_content" android:layout_weight="1"
-	        android:textStyle="bold" android:text="Max Duration">
-	    </TextView>
-	    <EditText android:text="10000" android:id="@+id/txtMaxDuration"
-	        android:layout_width="fill_parent" android:layout_height="wrap_content"
-	        android:visibility="visible" android:freezesText="true">
-	    </EditText>
-	    <TextView android:layout_width="fill_parent"
-	        android:layout_height="wrap_content" android:layout_weight="1"
-	        android:textStyle="bold" android:text="Bits Per Sample">
-	    </TextView>
-	    <Spinner android:layout_width="wrap_content"
-	        android:layout_height="wrap_content" android:id="@+id/spnBitsPerSample">
-	    </Spinner>
-	    <TextView android:layout_width="fill_parent"
-	        android:layout_height="wrap_content" android:layout_weight="1"
-	        android:textStyle="bold" android:text="Audio Type">
-	    </TextView>
-	    <Spinner android:layout_width="wrap_content"
-	        android:layout_height="wrap_content" android:id="@+id/spnAudioType">
-	    </Spinner>
-	</LinearLayout>
+            android:id="@+id/scrollView1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                  android:id="@+id/itemRoot"
+                  android:layout_width="fill_parent"
+                  android:layout_height="wrap_content"
+                  android:layout_marginLeft="10dip"
+                  android:layout_marginRight="10dip"
+                  android:minWidth="300dp"
+                  android:orientation="vertical"
+                  android:paddingLeft="20dip"
+                  android:paddingRight="20dip">
+
+        <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textStyle="bold"
+                android:text="@string/performaudiopassthru_initPrompt"/>
+
+        <EditText
+                android:text="@string/performaudiopassthru_initPromptDefault"
+                android:id="@+id/performaudiopassthru_txtInitialPrompt"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:visibility="visible"
+                android:freezesText="true"/>
+
+        <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textStyle="bold"
+                android:text="@string/performaudiopassthru_text1"/>
+
+        <EditText
+                android:text="@string/performaudiopassthru_text1Default"
+                android:id="@+id/performaudiopassthru_txtAudioPassThruDisplayText1"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:visibility="visible"
+                android:freezesText="true"/>
+
+        <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textStyle="bold"
+                android:text="@string/performaudiopassthru_text2"/>
+
+        <EditText
+                android:text="@string/performaudiopassthru_text2Default"
+                android:id="@+id/performaudiopassthru_txtAudioPassThruDisplayText2"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:visibility="visible"
+                android:freezesText="true"/>
+
+        <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textStyle="bold"
+                android:text="@string/performaudiopassthru_sampleRate"/>
+
+        <Spinner
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/performaudiopassthru_spnSamplingRate"/>
+
+        <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textStyle="bold"
+                android:text="@string/performaudiopassthru_maxDuration"/>
+
+        <EditText
+                android:text="@string/performaudiopassthru_maxDurationDefault"
+                android:id="@+id/performaudiopassthru_txtMaxDuration"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:visibility="visible"
+                android:freezesText="true"/>
+
+        <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textStyle="bold"
+                android:text="@string/performaudiopassthru_bitsPerSample"/>
+
+        <Spinner
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/performaudiopassthru_spnBitsPerSample"/>
+
+        <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textStyle="bold"
+                android:text="@string/performaudiopassthru_audioType"/>
+
+        <Spinner
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/performaudiopassthru_spnAudioType"/>
+
+        <CheckBox
+                android:id="@+id/performaudiopassthru_muteAudio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:text="@string/performaudiopassthru_muteAudio"/>
+    </LinearLayout>
 </ScrollView>
